gnome-shell (3.29.90-1ubuntu1) UNRELEASED; urgency=medium

  [ Didier Roche ]
  * Add debian/README.Ubuntu with instructions on how to update the Yaru
    theme.

  [ Marco Trevisan (Treviño) ]
  * Merge back with debian
  * d/p/volume-Add-back-sound-feedback-on-scroll.patch:
    - add missing GLib import causing a JS error
  * d/p/41-handle-logind-fail.patch,
    d/p/70_allow_sound_above_100.patch,
    d/p/workaround_crasher_fractional_scaling.patch,
    d/p/shell-ignore-invalid-window-monitor-index.patch,
    d/p/StIcon-only-compute-shadow-pipeline-when-the-texture-is-p.patch,
    d/p/js-fix-invalid-access-errors.patch,
    d/p/workspace-fix-repositioned-windows-in-activities.patch,
    d/p/authPrompt-Unset-preemptiveAnswer-on-reset.patch,
    d/p/authPrompt-Do-not-enable-sensitivity-if-retries-are-disal.patch,
    d/p/gdm-util-Always-allow-to-retry-login-in-unlock-mode.patch:
    - Removed obsolete or merged upstream patches

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Thu, 02 Aug 2018 00:38:48 +0200

gnome-shell (3.29.90-1) experimental; urgency=medium

  * Team upload

  [ Simon McVittie ]
  * New upstream release 3.29.90
  * Rebase patch series
  * Upgrade in lockstep with mutter 3.29.90
  * debian/gnome-shell.install: Install new migration script
  * Standards-Version: 4.1.5 (no changes required)
  * d/p/schema-Fix-XML-syntax.patch:
    Fix a comment syntax error that caused glib-compile-schemas to reject
    the file

  [ Marco Trevisan (Treviño) ]
  * d/p/workspace-Disconnect-from-window-signals-on-destruction.patch,
    d/p/workspaceThumbnail-Disconnect-from-window-signals-on-dest.patch:
    - Drop patches not needed anymore as per upstream changes
  * Bump dependency on gsettings-desktop-schemas 3.27.90

 -- Simon McVittie <smcv@debian.org>  Wed, 01 Aug 2018 17:01:05 +0100

gnome-shell (3.29.4-1) experimental; urgency=medium

  * debian/*: Update for experimental (3.29/3.30 series)
  * New upstream release 3.29.4 (etc)