@@ -142,12 +142,15 @@ StScrollBar {
 /* Slider */
 .slider {
   height: 1em;
-  -slider-height: 0.3em;
-  -slider-background-color: #363633;
-  -slider-border-color: #1f1f1c;
-  -slider-active-background-color: #dd4814;
-  -slider-active-border-color: #bb3e11;
-  -slider-border-width: 1px;
+  -barlevel-height: 0.3em;
+  -barlevel-background-color: #333636;
+  -barlevel-border-color: #1c1f1f;
+  -barlevel-active-background-color: #215d9c;
+  -barlevel-active-border-color: #184472;
+  -barlevel-overdrive-color: #d51010;
+  -barlevel-overdrive-border-color: #a60c0c;
+  -barlevel-overdrive-separator-width: 0.2em;
+  -barlevel-border-width: 1px;
   -slider-handle-radius: 6px; }
 
 /* Check Boxes */
@@ -543,12 +546,11 @@ StScrollBar {
     font-size: 3em; }
   .osd-window .level {
     height: 0.6em;
-    border-radius: 0.3em;
-    background-color: rgba(12, 13, 11, 0.5);
-    color: #eeeeec; }
-  .osd-window .level-bar {
-    background-color: #eeeeec;
-    border-radius: 0.3em; }
+    -barlevel-height: 0.6em;
+    -barlevel-background-color: rgba(11, 12, 13, 0.5);
+    -barlevel-active-background-color: #eeeeec;
+    -barlevel-overdrive-color: #d51010;
+    -barlevel-overdrive-separator-width: 0.2em; }
 
 /* Pad OSD */
 .pad-osd-window {
@@ -661,7 +663,8 @@ StScrollBar {
   /* transition from solid to transparent */
   transition-duration: 500ms;
   font-weight: bold;
-  height: 1.86em; }
+  height: 1.86em;
+  font-feature-settings: "tnum"; }
   #panel.unlock-screen, #panel.login-screen, #panel.lock-screen {
     background-color: transparent; }
   #panel #panelLeft, #panel #panelCenter {
@@ -685,6 +688,7 @@ StScrollBar {
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.9);
     transition-duration: 100ms; }
     #panel .panel-button .app-menu-icon {
+      -st-icon-style: symbolic;
       margin-left: 4px;
       margin-right: 4px; }
     #panel .panel-button .system-status-icon,
@@ -725,6 +729,8 @@ StScrollBar {
   #panel .power-status.panel-status-indicators-box {
     spacing: 0; }
   #panel .screencast-indicator {
+    color: #f57900; }
+  #panel .remote-access-indicator {
     color: #f57900; }
   #panel.solid {
     background-color: black;
@@ -847,7 +853,8 @@ StScrollBar {
   height: 2.4em;
   padding: 0.1em;
   margin: 2px;
-  border-radius: 1.4em; }
+  border-radius: 1.4em;
+  font-feature-settings: "tnum"; }
   .calendar-day-base:hover, .calendar-day-base:focus {
     background-color: rgba(238, 238, 236, 0.1); }
   .calendar-day-base:active, .calendar-day-base:selected {
@@ -925,7 +932,7 @@ StScrollBar {
 .message-icon-bin > StIcon {
   color: #bebeb6;
   icon-size: 16px;
-}
+  -st-icon-style: symbolic; }
 
 .message-secondary-bin {
   padding: 0 12px; }
@@ -997,6 +1004,7 @@ StScrollBar {
     margin-right: 1.09em; }
 
 .system-menu-action {
+  -st-icon-style: symbolic;
   color: #eeeeec;
   border-radius: 32px;
   /* wish we could do 50% */
@@ -1696,7 +1704,6 @@ StScrollBar {
 
 .login-dialog-user-list {
   spacing: 12px;
-  padding: .2em;
   width: 23em; }
   .login-dialog-user-list:expanded .login-dialog-user-list-item:selected {
     background-color: #dd4814;
@@ -1706,15 +1713,15 @@ StScrollBar {
 
 .login-dialog-user-list-item {
   border-radius: 5px;
-  padding: .2em;
+  padding: 6px;
   color: #a6a69b; }
-  .login-dialog-user-list-item:ltr {
+  .login-dialog-user-list-item:ltr .user-widget {
     padding-right: 1em; }
-  .login-dialog-user-list-item:rtl {
+  .login-dialog-user-list-item:rtl .user-widget {
     padding-left: 1em; }
   .login-dialog-user-list-item .login-dialog-timed-login-indicator {
     height: 2px;
-    margin: 2px 0 0 0;
+    margin-top: 6px;
     background-color: #eeeeec; }
   .login-dialog-user-list-item:focus .login-dialog-timed-login-indicator {
     background-color: #ffffff; }
@@ -1728,10 +1735,10 @@ StScrollBar {
   padding-left: 15px; }
 
 .user-widget-label:ltr {
-  padding-left: 18px; }
+  padding-left: 14px; }
 
 .user-widget-label:rtl {
-  padding-right: 18px; }
+  padding-right: 14px; }
 
 .login-dialog-prompt-layout {
   padding-top: 24px;
@@ -1773,7 +1780,8 @@ StScrollBar {
 
 .screen-shield-clock-time {
   font-size: 72pt;
-  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4); }
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
+  font-feature-settings: "tnum"; }
 
 .screen-shield-clock-date {
   font-size: 28pt;
