@@ -8,6 +8,8 @@ gnome-shell (3.29.90-1ubuntu1) UNRELEASED; urgency=medium
   * Merge back with debian
   * d/p/volume-Add-back-sound-feedback-on-scroll.patch:
     - add missing GLib import causing a JS error
+  * debian/ubuntu-session-mods/ubuntu.css:
+    - update rules as per upstream changes
   * d/p/41-handle-logind-fail.patch,
     d/p/70_allow_sound_above_100.patch,
     d/p/workaround_crasher_fractional_scaling.patch,
